oda oluşturma, arkadaş ekleme, bildirim kutusu, arayüz güncellendi.

--- a/TalkRoomDemo.PresentationLayer/Views/AddRoom/AddRoomPartial.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/AddRoom/AddRoomPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿@using TalkRoomDemo.DtoLayer.Dtos
-@model List<ServerListDto>
+@model ServerListDto
 
 
 <form class="create-room-form" asp-controller="AddRoom" asp-action="RoomCreate" method="post">
