--- a/TalkRoomDemo.PresentationLayer/Views/Home/Index.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "_HomeLayout";
 }
-<link rel="stylesheet" href="~/css/home.css" />
+@* <link rel="stylesheet" href="~/css/home.css" />
 <main class="chat-wrapper">
     <section class="chat-box" id="chatBox">
         <ul id="messagesList" class="messages-list"></ul>
@@ -21,3 +21,4 @@
     </script>
 <script src="~/js/chat.js"></script>
 
+ *@
