--- a/TalkRoomDemo.PresentationLayer/wwwroot/css/setting.css
+++ b/TalkRoomDemo.PresentationLayer/wwwroot/css/setting.css
@@ -9,10 +9,7 @@ body {
 
 .settings-container {
     width: 400px;
-    background-color: #23272A;
     padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 0 10px #00000050;
 }
 
 .profile-header {
@@ -88,4 +85,29 @@ button#saveBtn {
 
     .close-btn:hover {
         color: #ff4d4d;
+    }
+
+
+.delete-btn {
+    /* Renk */
+    background-color: #c93030;
+    color: white;
+    /* Kenarlýk */
+    border: none;
+    border-radius: 6px;
+    /* Boyut ve padding */
+    padding: 12px;
+    font-size: 16px;
+    /* Ýmleç */
+    cursor: pointer;
+    /* Diðer */
+    transition: background-color 0.3s ease;
+    width: 400px;
+}
+
+    /* Hover efekti */
+    .delete-btn:hover {
+        background-color:#ff4d4d #c93030;
+        color:white;
+        border:;
     }
