message-area-scroll ve thumb yapıldı.

--- a/TalkRoomDemo.PresentationLayer/Views/AddRoom/Settings.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/AddRoom/Settings.cshtml
@@ -24,7 +24,7 @@
     box-shadow: 0 0 10px #00000050;">
         <form asp-action="Settings" asp-controller="AddRoom" method="post">
             <input type="hidden" asp-for="ServerID" />
-            <div class="settings-container">
+            <div style="width:400px; padding:30px;">
                 <div class="profile-header">
                     <img id="profilePreview" src="@Model.ServerImageUrl" alt="Profil Fotoğrafı" class="profile-pic" />
                 </div>
