--- a/TalkRoomDemo.PresentationLayer/Views/AddRoom/Details.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/AddRoom/Details.cshtml
@@ -133,7 +133,7 @@
     .app-container-discord {
         display: flex;
         
-        background: #131621;
+        background: #0b0d13;
         color: #fff;
         font-family: "Segoe UI", sans-serif;
     }
@@ -227,12 +227,17 @@
         flex: 1;
         display: flex;
         flex-direction: column;
+        height: 80vh;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 
     .messages-list-discord {
         flex: 1;
         padding: 12px;
+        height:400px;
         overflow-y: auto;
+        overflow-x:hidden;
         display: flex;
         flex-direction: column;
         gap: 8px;
@@ -248,6 +253,7 @@
         position: fixed;
         bottom: 0;
         width: 64%;
+        background: #0b0d13;
     }
 
         .message-input-container-discord input {
@@ -268,4 +274,54 @@
             cursor: pointer;
             color: #fff;
         }
+
+    .messages-list-discord li {
+        display: flex;
+        align-items: flex-start;
+        margin: 6px 0;
+    }
+
+        /* Senin mesajların (sağda) */
+        .messages-list-discord li.mine {
+            justify-content: flex-end; /* sağa yasla */
+            
+        }
+
+            .messages-list-discord li.mine .message-content {
+               
+                color: white;
+                text-align: right;
+                border-radius: 8px;
+                padding: 8px 12px;
+                max-width: 60%;
+                margin-right:8px;
+            }
+
+        /* Diğer kullanıcıların mesajları (solda) */
+        .messages-list-discord li.other {
+            justify-content: flex-start; /* sola yasla */
+            flex-direction:row;
+        }
+
+            .messages-list-discord li.other .message-content {
+                background-color: #40444B; /* Discord koyu gri */
+                color: white;
+                text-align: left;
+                border-radius: 8px;
+                padding: 8px 12px;
+                max-width: 60%;
+                margin-left:8px;
+            }
+            .messages-list-discord::-webkit-scrollbar {
+    width: 6px;
+}
+
+.messages-list-discord::-webkit-scrollbar-thumb {
+    background-color: #2f3136;  /* koyu gri */
+    border-radius: 3px;
+}
+
+.cmessages-list-discord::-webkit-scrollbar-thumb:hover {
+    background-color: #40444b;
+}
 </style>
