--- a/TalkRoomDemo.PresentationLayer/wwwroot/css/setting.css
+++ b/TalkRoomDemo.PresentationLayer/wwwroot/css/setting.css
@@ -9,7 +9,10 @@ body {
 
 .settings-container {
     width: 400px;
+    background-color: #23272A;
     padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px #00000050;
 }
 
 .profile-header {
