--- a/TalkRoomDemo.PresentationLayer/Views/AddRoom/Details.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/AddRoom/Details.cshtml
@@ -2,7 +2,6 @@
 
 @{
     Layout = "_HomeLayout";
-    int currentRoomId = ViewBag.CurrentRoomId ?? 0;
 }
 <div class="app-container-discord">
 
@@ -119,6 +118,9 @@
         window.currentUserProfileUrl = window.currentUserProfileUrl = @Html.Raw(System.Text.Json.JsonSerializer.Serialize(User.FindFirst("ImageUrl")?.Value));
     </script>
     <script src="~/js/chat.js"></script>
+    <script>
+            
+    </script>
 </div>
 
 
@@ -321,7 +323,9 @@
     border-radius: 3px;
 }
 
-.cmessages-list-discord::-webkit-scrollbar-thumb:hover {
+.messages-list-discord::-webkit-scrollbar-thumb:hover {
     background-color: #40444b;
 }
 </style>
+
+
