--- a/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
@@ -15,7 +15,10 @@
         <aside class="servers-bar">
             <!-- Sunucu Listesi -->
             <div class="first-chanel-server">
-                <img class="server" src="~/Login/image/Logo.svg" />
+                <a href="@Url.Action("Index", "Home")">
+                    <img class="server" src="~/Login/image/Logo.svg" alt="Logo" />
+                </a>
+
                 <div class="element"></div>
             </div>
             <div ><img id="openModalBtn" class="addRomm" src="~/login\image\2.svg" title="Oda oluşturma" /></div>
