--- a/TalkRoomDemo.PresentationLayer/wwwroot/css/home.css
+++ b/TalkRoomDemo.PresentationLayer/wwwroot/css/home.css
@@ -374,6 +374,18 @@ body, html {
     }
 
 
+.ServerUsers-bar {
+    width: 240px;
+    background-color: #0b0d13;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 100vh;
+    
+}
+..ServerUsers-bar::
+
 
 .user-actions {
     display: flex;
